serviceA.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-a
  name: service-a
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
        version: v1
      name: service-a
    spec:
      containers:
      - name: service-a
        image: pelasne.azurecr.io/http-receiver:1.1.0
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  ports:
  - port: 80
  selector:
    app: service-a
