serviceB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b
  name: service-b
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        version: v1
      name: service-b
    spec:
      containers:
      - name: service-b
        image: pelasne.azurecr.io/http-receiver:1.1.0
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: service-b
