gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: service-b.default.svc.cluster.local
        subset: v1
    headers:
      request:
        remove: [ "x-payload", "x-forwarded-client-cert" ]
