route-on-header-alt.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-data-chevron
spec:
  ports:
  - port: 80
  selector:
    type: customer-data
    partition: chevron
---
apiVersion: v1
kind: Service
metadata:
  name: customer-data-exxon
spec:
  ports:
  - port: 80
  selector:
    type: customer-data
    partition: exxon
---
apiVersion: v1
kind: Service
metadata:
  name: customer-data-bp
spec:
  ports:
  - port: 80
  selector:
    type: customer-data
    partition: bp
---
apiVersion: v1
kind: Service
metadata:
  name: customer-data-alt
spec:
  ports:
  - port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-data-alt
spec:
  hosts:
  - customer-data-alt
  http:
  - match:
    - headers:
        x-partition:
          exact: chevron
    route:
    - destination:
        host: customer-data-chevron
  - match:
    - headers:
        x-partition:
          exact: exxon
    route:
    - destination:
        host: customer-data-exxon
  - match:
    - headers:
        x-partition:
          exact: bp
    route:
    - destination:
        host: customer-data-bp
