route-on-header.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-data
spec:
  ports:
  - port: 80
  selector:
    type: customer-data
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-data-dest
spec:
  host: customer-data
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: chevron
    labels:
      partition: chevron
  - name: exxon
    labels:
      partition: exxon
  - name: bp
    labels:
      partition: bp
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-data
spec:
  hosts:
  - customer-data
  http:
  - match:
    - headers:
        x-partition:
          exact: chevron
    route:
    - destination:
        host: customer-data
        subset: chevron
  - match:
    - headers:
        x-partition:
          exact: exxon
    route:
    - destination:
        host: customer-data
        subset: exxon
  - match:
    - headers:
        x-partition:
          exact: bp
    route:
    - destination:
        host: customer-data
        subset: bp
